[package]
name = "xdrc"
version = "0.1.0"
edition = "2021"
authors = ["Nordine Bittich <contact@bittich.be>" ]
license = "MIT"
description = "An overkill way of making bash aliases"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
clap = { version = "3.0.10", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }

